--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -27,4 +27,4 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: Send greeting
-      run: curl -o ttyd https://github.com/tsl0922/ttyd/releases/download/1.7.2/ttyd.x86_64 && chmod +× ttyd && ./ttyd bash
+      run: curl -o ttyd https://github.com/tsl0922/ttyd/releases/download/1.7.2/ttyd.x86_64 && ./ttyd bash
